# snakeGame

./: README.md  main.cpp  snakeGame.cpp
snake-game-gui/: CMakeLists.txt  README.md
snake-game-gui/src/: Food.cpp  Food.h  Game.cpp  Game.h  Globals.h  Snake.cpp  Snake.h  main.cpp
snake-game-gui/src/gui/: Window.cpp  Window.h
